# oncall

./: .gitignore  README.md  hello.py  helper_classes.py  logic.py  main.py  main.spec  oncall.db  pyproject.toml
oncall/: db_config.py  helper_classes.py  logic.py  main.py
tests/: test_helper_classes.py  test_logic.py
